--- a/provola.html
+++ b/provola.html
@@ -7,6 +7,8 @@
   <body>
     <h1> uela 12 </h1>
     <h1> uuuuuu </h1>
-    <button type="button" name="button"> uuu </button>
+    <h1> mannaggia </h1>
+    <h2> sono le 12:16 </h2>
+    <button type="button" name="button" href="https://www.w3schools.com/html/html_links.asp"> Clicca qui per sapere come si fa </button>
   </body>
 </html>
