--- a/provola.html
+++ b/provola.html
@@ -6,9 +6,8 @@
   </head>
   <body>
     <h1> uela 12 </h1>
-    <h1> uuuuuu </h1>
     <h1> mannaggia </h1>
     <h2> sono le 12:16 </h2>
-    <button type="button" name="button" href="https://www.w3schools.com/html/html_links.asp"> Clicca qui per sapere come si fa </button>
+    <button type="button" name="button" <a href="https://www.w3schools.com/">Visit W3Schools.com!</a>  Clicca qui per sapere come si fa </button>
   </body>
 </html>
