--- a/provola.html
+++ b/provola.html
@@ -8,6 +8,8 @@
     <h1> uela 12 </h1>
     <h1> mannaggia </h1>
     <h2> sono le 12:16 </h2>
-    <button type="button" name="button" href="https://www.w3schools.com/html/html_links.asp"> Clicca qui per sapere come si fa </button>
+    <a href="https://www.w3schools.com/html/html_links.asp">
+      <button type="button" name="button"> Clicca quì per sapere com'è stato fatto </button>
+    </a>
   </body>
 </html>
