--- a/provola.html
+++ b/provola.html
@@ -5,9 +5,7 @@
     <title></title>
   </head>
   <body>
-    <h1> uela 12 </h1>
-    <h1> mannaggia </h1>
-    <h2> sono le 12:17 </h2>
+    <h1> Ciao </h1>
     <a href="https://www.w3schools.com/html/html_links.asp">
       <button type="button" name="button"> Clicca quì per sapere com'è stato fatto </button>
     </a>
