--- a/provola.html
+++ b/provola.html
@@ -1,13 +1,169 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <title> Strawberry Pop-Tart Blow-Torches </title>
   </head>
   <body>
-    <h1> Ciao </h1>
-    <a href="https://www.w3schools.com/html/html_links.asp">
-      <button type="button" name="button"> Clicca quì per sapere com'è stato fatto </button>
-    </a>
+
+    <header>
+      <h1>
+        <img src="logo.png" alt="" align="middle" style="width:70px">
+        Strawberry Pop-Tart Blow-Torches
+      </h1>
+    </header>
+
+  <em> Last Updated: 2G August 1994 </em>
+
+  <section>
+    <h2>Author</h2>
+    <a href="http://www.pmichaud.com/">
+	     <address>Patrick R. Michaud, pmichaud@pobox.com</address>
+	  </a>
+  </section>
+
+  <section>
+    <h2>Abstract</h2>
+    Strawberry Pop Tarts may be a cheap and inexpensive source of
+    incendiary devices.  Toasters which fail to eject Pop Tarts
+    cause the Pop Tarts to emit flames 10-18 inches in height.
+  </section>
+
+  <section>
+    <h2>Introduction</h2>
+  	 <p>
+       Last year, an article by well-known newspaper columnist
+       <em>Dave Barry</em>
+       noted that
+       <em>Kellogg's Strawberry Pop Tarts</em>
+       (SPTs) could be made to emit flames "like a
+       blow torch" if left in a toaster too long.  Given previous
+       work in the field of food-entertainment (see
+        <a href="http://www.pmichaud.com/grape/"> <em>Fun With Grapes - A Case Study</em>
+        </a>
+      ), it was obvious that this was a new frontier that requires further exploration.
+      The present work describes our independent verification and experience with SPT-based combustion.
+     </p>
+  </section>
+
+  <section>
+    <h2> Material Used </h2>
+     <p>
+       Only two basic materials are needed to cause SPT-combustion: a (hopefully inexpensive) toaster and some Strawberry Pop Tarts (Figure1). In this work, the authors used <em> Kellogg's Strawberry Pop Tarts with Real Smucker's Fruit. </em> SPTs can be obtained either with or without frosting; the non-frosted variety were used for this experiment.
+     </p>
+
+     <p>
+       <img src="1.png" alt="" style="width:250px">
+       <br>
+       <a href="http://www.pmichaud.com/toast/toast-1a.gif"> Figure 1. Toaster and Strawberry Pop Tarts </a>
+     </p>
+
+     <p>
+       In addition to the basic materials, a number of safety-related items were needed to conduct this experiment. First, a suitable location for the experiment was required, it being expected that the kitchen was not the appropriate place for blow-torching SPTs. The author's driveway was chosen as a suitable site. Second, an appropriate means for extinguishing the SPTs would be needed; a research assistant brought along some baking soda for the purpose.
+     </p>
+  </section>
+
+  <section>
+    <h2> Experiment Preparation </h2>
+     <p>
+       The toaster and SPT both had to be properly prepared for this experiment. In order to guarantee that the SPT would receive sufficient heat to begin combustion, the toaster was set to its highest setting and the lever was jammed in the "down" position using adhesive cellophane. A SPT was removed from the box and its protective packaging and carefully placed into the toaster slot (Figure 2).
+     </p>
+
+     <p>
+       <img src="http://www.pmichaud.com/toast/toast-2a.gif" alt="">
+       <br>
+       <a href="http://www.pmichaud.com/toast/toast-2a.gif"> Figure 2. Preparation of Toaster and SPT </a>
+     </p>
+
+     <p>
+       Next, the toaster and SPT were taken to the driveway, and an extension cord was arranged to provide power to the toaster. At this point, we were ready to begin the experiment.
+     </p>
+
+     <p>
+       <img src="http://www.pmichaud.com/toast/toast-3a.gif" alt="">
+       <br>
+       <a href="http://www.pmichaud.com/toast/toast-3a.gif"> Figure 3. Toaster Prepared for SPT combustion </a>
+     </p>
+  </section>
+
+  <section>
+    <h2> The Experiment and Observations </h2>
+     <p>
+       The toaster was plugged in. First the toaster went through a normal "toasting" cycle (approximately 60 seconds), which more than thoroughly cooked the SPT (since the toaster was set to its darkest setting). By this point we could definitely detect a burnt SPT aroma. The toaster then attempted to eject the SPT, but was prevented from doing so by the adhesive cellophane. The toaster then began emitting loud rattling and buzzing noises due to its inability to eject the SPT.
+       <br>
+       <br>
+       (At this point the researchers became somewhat concerned that the noise from the toaster would wake the neighbors and attract undue attention. However, we decided that we were already committed to the experiment and that the neighbors would be able to sacrifice some sleep in the name of science.)
+       <br>
+       <br>
+       Soon thereafter, large amounts of smoke began pouring out of the toaster. The researchers noticed that some of the neighbors down the street were beginning to get a little curious, but the experiment proceeded nonetheless. Approximately 40 seconds later, small flames began licking their way out of the toaster. The flames steadily grew larger and larger until reaching a maximum height of about 18 inches above the top of the toaster. Figure 4 presents a time-series collage of the flames emitted from the SPT.
+     </p>
+
+     <p>
+       <img src="http://www.pmichaud.com/toast/toast-4a.gif" alt="">
+       <br>
+       <a href="http://www.pmichaud.com/toast/toast-4a.gif"> Figure 4. Time Series Photograph of Flaming SPT </a>
+     </p>
+
+     <p>
+       As the flames were reaching their maximum height, the toaster abruptly stopped making buzzing noises. We speculate that the flames had by this point shorted the electronics within the toaster. The toaster was quickly disconnected from the primary electrical source to avoid any potential damage to the author's house. At this point, the researchers also realized that the heat could inadvertently melt the adhesive cellophane and cause the flaming SPTs to suddenly eject from the toaster. Unfortunately, this did not occur. The flames continued for several minutes.
+       <br>
+       <br>
+       At this point there was some slight concern that the flames might take considerable time to diminish. We then enlisted the help of a reluctant research assistant to sprinkle baking soda on the flames. (The reluctance was understandable given the potential for premature SPT ejection described in the above paragraph.) The baking soda quickly extinguished the flames and produced still further smoke (Figure 5a).
+     </p>
+
+     <p>
+       <img src="http://www.pmichaud.com/toast/toast-5a.gif" alt="">
+       <br>
+       <a href="http://www.pmichaud.com/toast/toast-5a.gif"> Figure 5. Extinguising the SPT </a>
+     </p>
+
+     <p>
+       Once the flames were extinguished, the researchers noted an unanticipated problem: what to do with the (now defunct) toaster and the spent SPT. It became obvious that the toaster could not be returned to the author's house due to both a continued potential fire hazard and the smell of burnt strawberries. In addition, it was noted that the toaster was still "too hot to handle," necessitating the use of a nearby garden hose to cool the toaster off. This is illustrated in Figure 5b. Finally it was decided to just leave the toaster by the curb for the sanitation experts to pick up the next morning (Figure 6.)
+     </p>
+
+     <p>
+       <img src="2.png" alt="" style="width:200px">
+       <br>
+       <a href="http://www.pmichaud.com/toast/toast-6a.html"> Figure 6. Toaster Disposal </a>
+     </p>
+  </section>
+
+  <section>
+    <h2> Summary and Recommendations </h2>
+     <p>
+       In summary, overcooking the SPT did produce a good size flame. The effect was not as pronounced as the researchers had hoped, but was satisfying nonetheless. The research assistant noted that the flames produced did appear to have some color variation. We believe that frosted SPTs may successfully produce even larger torches. Further research in this area is warranted.
+       <br>
+       <br>
+       We did desire to repeat the experiment with the remaining five SPTs, but we could not do so because there were no more suitable toasters available for further experiments. In the future, we recommend that toasters be sold in six-packs to accomodate important SPT research. Instead, the remaining SPTs were sacrified over the course of the next several days in private, undocumented consumption experiments.
+     </p>
+  </section>
+
+  <section>
+    <h2> Acknowledgements </h2>
+     <p>
+       Special thanks to Jennifer "Svetlana" Reckard for her suggestions and proofreading of this work.
+     </p>
+  </section>
+
+  <hr>
+
+  <section>
+    <h2> Followup Comments </h2>
+     <p>
+       The response to my Strawberry Pop Tart article has been overwhelming. In October 1994 alone it's been accessed more than 2000 times. Here are some of the terrific followup messages I've received:
+       <ol>
+         <li>
+           <a href="http://www.pmichaud.com/toast/follow1.html"> 12-Aug-94: schnitz@unipress.com </a>
+          </li>
+         <li>
+           <a href="http://www.pmichaud.com/toast/follow2.html"> 13-Oct-94: avonruff@hydra.urbana.mcd.mot.com </a>
+           Please send me your comments! I'm especially interested to learn how you found out about this page, since I haven't advertised it much of anywhere.
+         </li>
+         <hr>
+         <em> <a href="http://www.pmichaud.com"> Patrick R. Michaud/pmichaud@pobox.com </a> </em>
+       </ol>
+     </p>
+
+  </section>
+
   </body>
 </html>
